# juku-seiseki-admin

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  PHASE1_SETUP.md  QUICKSTART.md  README.md  package.json  pyproject.toml  railway.toml  run.bat  run.py  sample_data.csv
.claude/: settings.local.json
app/: auth.py  config.py  database.py  dependencies.py  main.py  templates_config.py
app/models/: attendance.py  class_.py  grade.py  student.py
app/routers/: attendance.py  auth.py  classes.py  grades.py  pages.py  students.py  upload.py
app/services/: csv_importer.py  grade_calculator.py
app/templates/: base.html  login.html
app/templates/admin/: _classes_tab.html  _dashboard_tab.html  _grades_tab.html  _reports_tab.html  _students_tab.html  index.html
app/templates/dashboard/: _advice.html  _comparison.html  _grades_table.html  index.html
app/templates/partials/: advice.html  attendance.html  class_students_select.html  classes_table.html  comparison.html  grades_table.html  students_table.html  upload_error.html  upload_preview.html  upload_success.html
app/templates/upload/: index.html
data/: attendance.json  classes.json  grades.json  students.json
public/: admin.html  index.html  styles.css  upload.html
scripts/: import_json.py
src/: admin.js  csvParser.js  dashboard.js  dataLoader.js  uploadHandler.js
static/css/: styles.css
